# jabuty-reviewers-quest

./: .gitignore  README.md  package-lock.json  pyproject.toml  swagger.yaml
.github/workflows/: website-ci.yml
frontend/: .eslintrc.js  package-lock.json  package.json  vue.config.js  vue.config.mjs
frontend/src/: App.vue
frontend/src/common/: types.ts
frontend/src/components/: Game.vue  GameList.vue  LoginUser.vue  NavBar.vue  RegisterUser.vue  ReviewCard.vue  ReviewList.vue  TrendingGames.vue  UserProfile.vue
frontend/src/plugins/: vuetify.ts
frontend/src/router/: index.ts  index.ts.rej
frontend/src/views/: GameListView.vue  LoginPageView.vue  RegisterUserView.vue  RegisterView.vue  ReviewListView.vue  TrendingGamesView.vue  UserProfileView.vue
reviewers_quest/: __init__.py  __main__.py  api.py  app.py  app_def.py  db.py  regendb.py
reviewers_quest/api/: __init__.py  game.py  user.py
scripts/: __init__.py
