[tool.poetry]
name = "reviewers-quest"
version = "0.1.0"
description = ""
authors = ["Jabuty Group"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.0"
flask-sqlalchemy = "^3.1.1"
flask-cors = "^4.0.0"

[tool.poetry.scripts]
app = "reviewers_quest.app:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
