[tool.poetry]
name = "reviewers-quest"
version = "0.1.0"
description = ""
authors = ["Jabuty Group"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.0"
flask-sqlalchemy = "^3.1.1"
flask-cors = "^4.0.0"

[tool.poetry.scripts]
app = "scripts:run"
format = "scripts:format"
check = "scripts:check"
regendb = "scripts:regendb"

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.4"
mypy = "^1.7.0"

[tool.ruff]
line-length = 120
target-version = "py311"
task-tags = ["TODO", "FIXME"]
select = [
    "E4", "E7", "E9", "F", "ANN001", "ANN2", "N80", "N999", "B0", "A", "ISC003", "RET", "SIM", "UP",
    "D101", "D103", "D104", "D106", "D200", "D204", "D205", "D209", "D211", "D213", "D418", "D419"
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
